--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -59,7 +59,7 @@
 \pagenumbering{arabic}
 \setcounter{page}{1}
 \section*{{\fontsize{13}{14.35}\selectfont PREFACIO}}
-\addcontentsline{toc}{section}{PREFACIO}
+\addcontentsline{toc}{section}{Prefacio}
 
 Jorge Manrique nació ca. 1440 y falleció en abril de 1479. Una noticia de su fallecimiento la transmite Fernando del Pulgar en su \textit{Crónica de los reyes Católicos}:
 
@@ -72,34 +72,34 @@ El título de la obra, \textit{Coplas por la muerte de su padre}, resulta un tan
 No se conservaron autógrafos de alguna copla ni testimonios que puedan considerarse apógrafos o idiógrafos. El testimonio más antiguo que contiene la colección de cuarenta coplas es el manuscrito del \textit{Cancionero de Egerton}, y no es sino hasta ca. 1482-83 —seis o siete años tras la redacción y cuatro o cinco tras el fallecimiento del autor— que aparece en un impreso en carácter de \textit{editio princeps}. Es necesario destacar que no existió un \comillas{obras de don Jorge Manrique} o una edición de sus textos, sino que solo se conservaron dispersos en cancioneros.
 
 \section*{\fontsize{13}{14.35}\selectfont TESTIMONIOS\footnote{ Se adoptan las siglas utilizadas por \textcite{PérezPriego2017} quien, a su vez, las adopta de Dutton a partir de \textit{El cancinonero del s. XV (ca. 1360-1520)} [7 vols.], texto que para la presente edición no pudo consultarse.}}
-\addcontentsline{toc}{section}{TESTIMONIOS}
+\addcontentsline{toc}{section}{Testimonios}
 
-\textit{LB3}. \textit{Cancionero de Egerton}; British Library, Eg. 939.
+\textit{LB3}: \textit{Cancionero de Egerton}; British Library, Eg. 939.
 
 Manuscrito en papel con marcas de agua; de finales de 1470 e inicios de 1480; 19x14,5cm.; escritura gótica cortesana, copista castellano; copia de un genuino llevado a cabo en la corte de Navarra; contiene textos poéticos y epistolares; 3 cuardas [2 al inicio y 1 de cierre] y 122 fols.; los ff. 15r.-18v. contienen las coplas con la rúbrica \comillas{¶Coplas que fiço don jorje manrriq\textit{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\textit{ue} su padre}; la copla XL estuvo incompleta, pero otra redacción la completó en los pasajes restantes con una escritura gótica descuidada, escrita en los espacios restantes del f. 18v., porque el fol. central [primitivo f. 19v.] no se conservó, que debía contener las líneas faltantes de la copla, y tras el fol. no conservado, debía continuar el texto del \textit{Infante Epitus} \textcite{Beltrán2011}; \comillas{cancionero pro-Isabelino} \parencite{Severin2000}.\vspace{5pt}
 
-\textit{82*JM}. \textit{Vita Christi por fray Íñigo de Mendoza}; RBME, 100-II-17.
+\textit{82*JM}: \textit{Vita Christi por fray Íñigo de Mendoza}; RBME, 100-II-17.
 
 Impresión incunable; tipografía gótica a doble columna; ca. 1480-1484, Zaragosa?; 52 fols.; los ff. 41r.-44v. contienen las coplas con la rúbrica \comillas{Dezir de don jorge manrriq\textit{ue} por la muerte de su padre}; hay dos ejemplares conocidos, que se hallan uno, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [100-II-17], y el otro, en la Biblioteca Comunale de Palermo [Esp-XI, F. 56, núm.3]; \textit{editio princeps}.\vspace{5pt}
 
-\textit{86*RL}. \textit{Cancionero de Ramón de Llavia}; BNE, INC/2567.
+\textit{86*RL}: \textit{Cancionero de Ramón de Llavia}; BNE, INC/2567.
 
 Impresión a doble columna; tipografía gótica; Zaragoza, Pablo Hurus, ca. 1488-1490?; 98 fols.; los ff. 73r.-76r. contienen las coplas con la rúbrica \comillas{De don jorge manrrique por la muerte de su padre}; dos ejemplares en la Biblioteca Nacional de España con las siglas INC/2567 y INC/2892; dedicado a doña Francisquina de Bardací, según el prólogo \comillas{fecho a la señora doña francisqujna de bardaçi mujer del magnifico señor mofsen(?) joan fernandez de heredia gouernador de arago\textit{n} por ramon dellabia en q\textit{ue} le endereça el presente libro}.\vspace{5pt}
 
-\textit{HH1}. \textit{Cancionero de Oñate-Castañeda}; Harvard, Houghton Library, MS. Span. 97.
+\textit{HH1}: \textit{Cancionero de Oñate-Castañeda}; Harvard, Houghton Library, MS. Span. 97.
 
 Manuscrito en papel; 28x20,6cm.; escritura gótica del s. XV con rasgos de cortesana; papel y filigranas ca. 1480-1486; consta de un total de 437 fols.; los ff. 421v.-424v. contienen las coplas I-XXXIV con la rúbrica \comillas{Coplas de do\textit{n} jorge ma\textit{n}riq\textit{ue} a la muerte del maestre do\textit{n} rod\textit{rig}o ma\textit{n}riq\textit{ue} su padre}; carece del f. 425; para las cuestión de las variantes adiáforas \textit{conservados}/\textit{olvidados} resulta lacunoso. Edición paleográfica de \textcite{Severin1990}.\vspace{5pt} 
 
-\textit{MN19}. \textit{Cancionero de Pero Guillén de Segovia}; BNE, MS/4114.
+\textit{MN19}: \textit{Cancionero de Pero Guillén de Segovia}; BNE, MS/4114.
 
 Manuscrito en papel; 21x15cm.; copia del s. XVIII de un manuscrito de finales del s. XV (Pérez Priego, 2017; Beltrán, 1991); 6 guardas [3 al inicio y 3 de cierre] y 731 fols.; los ff. 407r.-418v. contienen las coplas X-XL [acéfalo].\vspace{5pt}
 
-\textit{83*IM}. \textit{Cancionero de fray Íñigo de Mendoza}; BNE, INC/897.
+\textit{83*IM}: \textit{Cancionero de fray Íñigo de Mendoza}; BNE, INC/897.
 
 Impresión incunable a doble columna; tipografía gótica; Zamora, 1483?; 90 fols.; los ff. 67r.-70r. contienen las coplas con la rúbrica \comillas{Coplas que hizo do\textit{n} jorge manrriq\textit{ue} ala muerte del maestre de santiago do\textit{n} rodrigo manrique su padre}; existen dos ejemplares y se hallan uno, en la Biblioteca Nacional de España [INC/897], y otro, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [38-I-22].
 
 \section*{{\fontsize{13}{14.35}\selectfont CRITERIOS DE EDICIÓN}}
-\addcontentsline{toc}{section}{CRITERIOS DE EDICIÓN}
+\addcontentsline{toc}{section}{Criterios de edición}
 
 Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcite{Beltrán1991,Beltrán2013} y \textcite{PérezPriego1990,PérezPriego2017} y, conforme a ello, se siguió el subarquetipo \textit{α} del \textit{stemma codicum} construido por el segundo. Descartando el subarquetipo \textit{β}, siendo \textit{83*IM} su testimonio más representativo\footnote{ Aunque el subarquetipo \textit{β} contenga otros testimonios útiles para la reconstrucción del arquetipo \textit{X} —esto es, \textit{EM6} y \textit{PN1}—, a efectos prácticos de esta edición liminar se utilizó únicamente \textit{83*IM} por ser este el testimonio más representativo del subarquetipo, según lo estudiaron \textcite{PérezPriego2017} y \textcite{Beltrán1991,Beltrán2013} y, además, por ser el testimonio que el segundo utiliza como texto de base para sus ediciones.}, la filiación de los testimonios se resumiría con el siguiente \textit{stemma} reducido\footnote{ Para el \textit{stemma} completo, \textit{cfr.} \textcite[103]{PérezPriego2017}.} a partir de lo anteriormente indicado:
 	\begin{center}
@@ -150,98 +150,98 @@ Se utilizó como texto de base el testimonio de \textit{LB3} por portar este lec
 
 Criterios de presentación gráfica\footnote{No aplican al aparato de variantes, a excepción de \textit{nn}=\textit{ñ} y las grafías dobles.}:
 
-~\textit{b}-\textit{v}= se conserva la alternancia.
+~\textit{b}-\textit{v}: se conserva la alternancia.
 
-~\textit{f}= se mantiene en vocablos como \comillas{fizo} [hizo], \comillas{falló} [halló], \comillas{fijo} [hijo], porque, en general, corresponden a la \textit{f} inicial latina y, por tanto anulan las sinalefas.
+~\textit{f}: se mantiene en vocablos como \comillas{fizo} [hizo], \comillas{falló} [halló], \comillas{fijo} [hijo], porque, en general, corresponden a la \textit{f} inicial latina y, por tanto anulan las sinalefas.
 
-~\textit{t}= se respeta la grafía en expresiones finalizadas en -\textit{at}, salvo cuando el testimonio exija una conversión por la rima.
+~\textit{t}: se respeta la grafía en expresiones finalizadas en -\textit{at}, salvo cuando el testimonio exija una conversión por la rima.
 
-~\textit{x}= equivale a la fricativa posalveolar sorda, por tanto, se conserva.
+~\textit{x}: equivale a la fricativa posalveolar sorda, por tanto, se conserva.
 
-~\textit{ç}= se respetan en el texto las soluciones que ofrece el testimonio de base.
+~\textit{ç}: se respetan en el texto las soluciones que ofrece el testimonio de base.
 
-~\textit{i}-\textit{y}-\textit{j}= se regulariza. \textit{i} se coloca para vocales; \textit{y} para la conjunción copulativa y para vocablos cuya grafía final es \textit{y} vocálico [rey]; \textit{j} solo para consonantes.
+~\textit{i}-\textit{y}-\textit{j}: se regulariza. \textit{i} se coloca para vocales; \textit{y} para la conjunción copulativa y para vocablos cuya grafía final es \textit{y} vocálico [rey]; \textit{j} solo para consonantes.
 
-~\textit{g}-\textit{j}= la alternancia se conserva.
+~\textit{g}-\textit{j}: la alternancia se conserva.
 
-~\textit{v}-\textit{u}= se coloca \textit{v} cuando es una consonante y \textit{u} cuando es vocal.
+~\textit{v}-\textit{u}: se coloca \textit{v} cuando es una consonante y \textit{u} cuando es vocal.
 
-~\textit{rr}-\textit{ss}-\textit{ff}= se simplifican en \textit{r}, \textit{s} y \textit{f}.
+~\textit{rr}-\textit{ss}-\textit{ff}: se simplifican en \textit{r}, \textit{s} y \textit{f}.
 
-~\textit{nn}= se transcribe como \textit{ñ}.
+~\textit{nn}: se transcribe como \textit{ñ}.
 
-~\textit{th}= se conserva para indicar latinismos cultos en el texto.
+~\textit{th}: se conserva para indicar latinismos cultos en el texto.
 
-~\textit{⁊}= se interpreta por \textit{e}.
+~\textit{⁊}: se interpreta por \textit{e}.
 
 Las contracciones se separan sin indicación alguna. Las grafías en cursiva corresponden, casi sin excepción, a siglas en \textit{LB3}, que se desarrollaron según usos del copista; también cuando se adopten lecciones de \textit{HH1} o de algún testimonio impreso.
 
-El orden de las coplas que se sigue es el de \textit{LB3} que, a su vez, coincide con el orden y conclusiones de \textcite{Senabre1983}, \textcite{Palumbo1983}, \textcite{Orduna1967}, \textcite{Beltrán1991,Beltrán2013}, \textcite{PérezPriego1990,PérezPriego2017} y la 1ª edición crítica \parencite{Foulché-Delbosc1902}, descartando así el orden de \textit{82*JM}.
+El orden de las coplas que se sigue es el de \textit{LB3} que, a su vez, coincide con el orden y conclusiones de \textcite{Senabre1983}, \textcite{Palumbo1983}, \textcite{Orduna1967}, \textcite{Beltrán1991,Beltrán2013}, \textcite{PérezPriego1990,PérezPriego2017} y la 1ª edición crítica del texto \parencite{Foulché-Delbosc1902}, descartando así el orden de \textit{82*JM}.
 
 Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes textuales y los comentarios adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante —si se coloca \comillas{||}, indicará que aún continúa en el mismo pasaje—, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnote{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Un ejemplo con la copla V: \comillas{56 quando] mientra \textit{δ}; quanto \textit{HH1}}. Se eludirán variantes gráficas y de espacio. Los comentarios contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base —correcciones, entre otros— y plausibles interpretaciones al texto.
 
 \section*{{\fontsize{13}{14.35}\selectfont BIBLIOGRAFÍA}}
-\addcontentsline{toc}{section}{BIBLIOGRAFÍA}
+\addcontentsline{toc}{section}{Bibliografía}
 \nocite{*}
 \printbibliography[heading=none]
 \newpage
 
 \section*{\raggedleft \fontsize{13}{14.35}\selectfont TEXTO Y APARATO CRÍTICOS}
-\addcontentsline{toc}{section}{TEXTO Y APARATO CRÍTICOS}
+\addcontentsline{toc}{section}{Texto y aparato críticos}
 \newpage
 
 \section*{{\fontsize{13}{14.35}\selectfont CONSPECTUS SIGLORUM}}
-\addcontentsline{toc}{section}{CONSPECTUS SIGLORUM}
+\addcontentsline{toc}{section}{Conspectus siglorum}
 
 \subsection*{{\fontsize{11}{11.96}\selectfont TESTIMONIA}}
-\addcontentsline{toc}{subsection}{TESTIMONIA}
+\addcontentsline{toc}{subsection}{Testimonia}
 
-\textit{LB3}= \textit{Cancionero de Egerton}, 1470?-1480?
+\textit{LB3}: \textit{Cancionero de Egerton}, 1470?-1480?
 
-\textit{82*JM}= \textit{Vita Christi por Fray Íñigo de Mendoza}, ca. 1480-1484.
+\textit{82*JM}: \textit{Vita Christi por Fray Íñigo de Mendoza}, ca. 1480-1484.
 
-\textit{86*RL}= \textit{Cancionero de Ramón de Llavia}, 1488-1490?
+\textit{86*RL}: \textit{Cancionero de Ramón de Llavia}, 1488-1490?
 
-\textit{HH1}= \textit{Cancionero de Oñate-Castañeda}, s. XV.
+\textit{HH1}: \textit{Cancionero de Oñate-Castañeda}, s. XV.
 
-\textit{MN19}= \textit{Cancionero de Pero Guillén de Segovia}, copia del s. XVIII de un manuscrito del s. XV.
+\textit{MN19}: \textit{Cancionero de Pero Guillén de Segovia}, copia del s. XVIII de un manuscrito del s. XV.
 
-\textit{83*IM}= \textit{Cancionero de fray Íñigo de Mendoza}, 1483?
+\textit{83*IM}: \textit{Cancionero de fray Íñigo de Mendoza}, 1483?
 
 \subsection*{{\fontsize{11}{11.96}\selectfont APPARATUS CRITICUS}}
-\addcontentsline{toc}{subsection}{APPARATUS CRITICUS}
+\addcontentsline{toc}{subsection}{Apparatus criticus}
 
-\textit{a. corr.}= ante correctionem [antes de la corrección].
+\textit{a. corr.}: ante correctionem [antes de la corrección].
 
-\textit{c.}= commentario.
+\textit{c.}: commentario.
 
-\textit{corr.}= correxit [corrigió].
+\textit{corr.}: correxit [corrigió].
 
-\textit{eras.}= erasit [borró].
+\textit{eras.}: erasit [borró].
 
-\textit{err.}= erravit [cometió un error].
+\textit{err.}: erravit [erró].
 
-\textit{ras.}= rasura [parte tachada o dañada].
+\textit{ras.}: rasura [parte tachada o dañada].
 
-\textit{om.}= omisit [omitió].
+\textit{om.}: omisit [omitió].
 
-\textit{p. corr.}= post correctionem [tras la corrección].
+\textit{p. corr.}: post correctionem [tras la corrección].
 
-\textit{pr.}= prius [anterior].
+\textit{pr.}: prius [anterior].
 
-\textit{sec. m.}= secunda manus [segunda redacción].
+\textit{sec. m.}: secunda manus [segunda redacción].
 
-\textit{transp.}= transposuit [trasladó de sitio].
+\textit{transp.}: transposuit [trasladó de sitio].
 
-\textit{δ}= \textit{82*JM} + \textit{86*RL}.
+\textit{δ}: \textit{82*JM} + \textit{86*RL}.
 
-\textit{ε}= \textit{HH1} + \textit{MN19}.
+\textit{ε}: \textit{HH1} + \textit{MN19}.
 
-\textit{γ}= \textit{δ} + \textit{ε}. 
+\textit{γ}: \textit{δ} + \textit{ε}. 
 \newpage
 %Aquí inician las COPLAS POR LA MVERTE DE SV PADRE.
 {\begin{center}
-		[I]\footnoteA{ Rúbrica= \comillas{Coplas que fiço don jorge ma\textit{n}rriq\textit{ue} por la muerte de su padre} \textit{LB3}; \comillas{Dezir de don jorge manrriq\textit{ue} por la muerte de su padre} \textit{82*JM}; \comillas{De don jorge manrique por la muerte de su padre} \textit{86*RL}; \comillas{Coplas de do\textit{n} jorge ma\textit{n}riq\textit{ue} a la muerte del maestre don rrod\textit{rig}o ma\textit{n}riq\textit{ue} su padre} \textit{HH1}; \comillas{Coplas que hizo do\textit{n} jorge manrriq\textit{ue} ala muerte del maestre de santiago do\textit{n} rodrigo manrique su padre} \textit{83*IM}.}
+		[I]\footnoteA{ Rúbrica: \comillas{Coplas que fiço don jorge ma\textit{n}rriq\textit{ue} por la muerte de su padre} \textit{LB3}; \comillas{Dezir de don jorge manrriq\textit{ue} por la muerte de su padre} \textit{82*JM}; \comillas{De don jorge manrique por la muerte de su padre} \textit{86*RL}; \comillas{Coplas de do\textit{n} jorge ma\textit{n}riq\textit{ue} a la muerte del maestre don rrod\textit{rig}o ma\textit{n}riq\textit{ue} su padre} \textit{HH1}; \comillas{Coplas que hizo do\textit{n} jorge manrriq\textit{ue} ala muerte del maestre de santiago do\textit{n} rodrigo manrique su padre} \textit{83*IM}.}
 \end{center}
 %Espacio para que el comando que ejecuta el sistema no se quiebre.
 \beginnumbering
@@ -287,7 +287,7 @@ por tal manera.
 \pend
 
 \begin{center}
-		[III]\footnoteA{ Rúbrica= \comillas{conpara} \textit{LB3}.}
+		[III]\footnoteA{ Rúbrica: \comillas{conpara} \textit{LB3}.}
 \end{center}
 \pstart
 N\textit{uest}ras vidas son los ríos\\
@@ -309,7 +309,7 @@ y los ricos.
 \pend
 
 \begin{center}
-	[IV]\footnoteA{ Rúbrica= «ynuoca» \textit{LB3}; «inuocaçion» \textit{82*JM}; «Inuocacion» \textit{86*RL}.}
+	[IV]\footnoteA{ Rúbrica: «ynuoca» \textit{LB3}; «inuocaçion» \textit{82*JM}; «Inuocacion» \textit{86*RL}.}
 \end{center}
 \pstart
 Dexo las invocaçiones\\
@@ -331,7 +331,7 @@ su deidad.
 \pend
 
 \begin{center}
-	[V]\footnoteA{ Rúbrica= \comillas{ap[lica] y [co]\textit{n}para} \textit{ras. LB3}.}
+	[V]\footnoteA{ Rúbrica: \comillas{ap[lica] y [co]\textit{n}para} \textit{ras. LB3}.}
 	\end{center}
 \pstart
 Este mu\textit{n}do es el camino\\
@@ -353,7 +353,7 @@ descansamos.
 \pend
 
 \begin{center}
-	[VI]\footnoteA{ Rúbrica= \comillas{p\textit{r}osigue} \textit{LB3}.}
+	[VI]\footnoteA{ Rúbrica: \comillas{p\textit{r}osigue} \textit{LB3}.}
 \end{center}
 \pstart
 \edtext{Este}{\lemma{este}\Afootnote{y este \textit{82*JM}}} mu\textit{n}do bueno fue\\
@@ -767,7 +767,7 @@ co\textit{n} tu flecha.
 \pend
 
 \begin{center}
-	[XXV]\footnoteA{ XIII en \textit{82*JM}. Rúbrica= \comillas{dirige la fabla al maestre do\textit{n} rodrigo su padre} \textit{LB3}; \comillas{ffabla del maestre do\textit{n} rr\textit{odri}go ma\textit{n}riq\textit{ue}} \textit{HH1}.}
+	[XXV]\footnoteA{ XIII en \textit{82*JM}. Rúbrica: \comillas{dirige la fabla al maestre do\textit{n} rodrigo su padre} \textit{LB3}; \comillas{ffabla del maestre do\textit{n} rr\textit{odri}go ma\textit{n}riq\textit{ue}} \textit{HH1}.}
 \end{center}
 \pstart
 Aquel de \edtext{buenos}{\Afootnote{bienes \textit{MN19}}} abrigo,\\ amado por virtuoso
@@ -831,7 +831,7 @@ que prometía.
 \pend
 
 \begin{center}
-	[XXVIII]\footnoteA{ XXVI en\textit{82*JM}. Rúbrica= \comillas{prosigue} \textit{LB3}.}
+	[XXVIII]\footnoteA{ XXVI en\textit{82*JM}. Rúbrica: \comillas{prosigue} \textit{LB3}.}
 \end{center}
 \pstart
 Antonio \edtext{Pío}{\lemma{pio}\Afootnote{pia \textit{82*JM}}} e\textit{n} cleme\textit{n}çia,\\
@@ -963,7 +963,7 @@ a su puerta,
 \pend
 
 \begin{center}
-	[XXXIV]\footnoteA{ XXII en \textit{82*JM}. Rúbrica= \comillas{ffabla la muerte con el maestre} \textit{LB3}.}
+	[XXXIV]\footnoteA{ XXII en \textit{82*JM}. Rúbrica: \comillas{ffabla la muerte con el maestre} \textit{LB3}.}
 \end{center}
 \pstart
 diziendo: «bue\textit{n} cavallero,\\
@@ -1051,7 +1051,7 @@ partid con buena \edtext{}{\lemma{\hspace*{-1em}}\Afootnote[nosep]{bua/bna/vna \
 \pend
 
 \begin{center}
-	[XXXVIII]\footnoteA{ Rúbrica= «rresponde don rrodrigo manrrique a la muerte» \textit{LB3}; «Respuesta del maestre» \textit{82*JM}; «Reza a la muerte» \textit{86*RL}; «Respondel Maestre» \textit{MN19}, \textit{83*IM}.}
+	[XXXVIII]\footnoteA{ Rúbrica: «rresponde don rrodrigo manrrique a la muerte» \textit{LB3}; «Respuesta del maestre» \textit{82*JM}; «Reza a la muerte» \textit{86*RL}; «Respondel Maestre» \textit{MN19}, \textit{83*IM}.}
 \end{center}
 \pstart
 «No \edtext{gastemos}{\Afootnote{tengamos \textit{86*RL}}} tie\textit{n}po ya\\
@@ -1073,7 +1073,7 @@ q\textit{ua}ndo Dios q\textit{ui}ere q\textit{ue} muera,
 \pend
 
 \begin{center}
-	[XXXIX]\footnoteA{ Rúbrica= «oraçion que fizo el maestre» \textit{LB3}; «Oracion» \textit{ 82*JM}, \textit{86*RL}, \textit{83*IM}; «Oracion quel Maestre face á Dios» \textit{MN19}.}
+	[XXXIX]\footnoteA{ Rúbrica: «oraçion que fizo el maestre» \textit{LB3}; «Oracion» \textit{ 82*JM}, \textit{86*RL}, \textit{83*IM}; «Oracion quel Maestre face á Dios» \textit{MN19}.}
 \end{center}
 \pstart
 »Tú, q\textit{ue} por n\textit{uest}ra maldat\\
@@ -1095,7 +1095,7 @@ me perdona.»
 \pend
 
 \begin{center}
-    [XL]\footnoteA{ Rúbrica= «fin» \textit{LB3}, \textit{86*RL}, \textit{MN19}; «Torna el actor y faze fin» \textit{82*JM}.}
+    [XL]\footnoteA{ Rúbrica: «fin» \textit{LB3}, \textit{86*RL}, \textit{MN19}; «Torna el actor y faze fin» \textit{82*JM}.}
 \end{center}
 \pstart
 Así, co\textit{n} tal ente\textit{n}der\\
@@ -1119,9 +1119,9 @@ su memoria.
 \newpage
 
 \section*{\fontsize{13}{14.35}\selectfont APÉNDICE}
-\addcontentsline{toc}{section}{APÉNDICE}
+\addcontentsline{toc}{section}{Apéndice}
 
-Coplas apócrifas en la \textit{Glosa Famossisima} de Alonso de Cervantes, ubicadas entre las coplas XXIV y XXV. Texto fijado por \textcite{Foulché-Delbosc1902}.\vspace{5pt}
+Coplas apócrifas en la \textit{Glosa Famossisima} de Alonso de Cervantes, ubicadas entre las coplas XXIV y XXV. Texto fijado por \textcite{Foulché-Delbosc1902}:\vspace{5pt}
 
 \begin{pairs}
 	\begin{Leftside}
@@ -1162,13 +1162,8 @@ Coplas apócrifas en la \textit{Glosa Famossisima} de Alonso de Cervantes, ubica
 \end{pairs}
 	\Columns
 
-\vspace{11pt}Tras la copla XL, en \textit{83*IM} yace un epitafio con la rúbrica \comillas{En su sepultura dize desta manera}.\vspace{5pt}
+\vspace{11pt}Tras la copla XL, en \textit{83*IM} yace un epitafio con la rúbrica \comillas{En su sepultura dize desta manera}:\vspace{5pt}
 
 	Aquí yaze muerto el ombre\\ que vivo queda su nombre.\footnoteA{ Beltrán, citando a Luis de Salazar y Castro, recupera «AQVI YACE MVERTO VN HOMBRE, QVE VIVO DEJO SV NOMBRE» \parencite[158]{Beltrán1991}.}
 %Espacio para que el comando que ejecuta el sistema no se quiebre. 
 \end{document}
-
-%%% Local Variables:
-%%% mode: LaTeX
-%%% TeX-master: t
-%%% End:
