--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -1,10 +1,8 @@
 \documentclass[11pt,a4paper,twoside]{article}
 \usepackage{reledmac}
 \usepackage{reledpar}
-\usepackage[T1]{fontenc}
 \usepackage{fontspec}
-\usepackage[paperwidth=17.5cm,paperheight=25.5cm,top=1.4cm,inner=1.75cm,outer=1.4cm,bottom=2.54cm]{geometry}
-\usepackage[automark]{scrlayer-scrpage}
+\usepackage[paperwidth=17.5cm,paperheight=25.5cm,top=1.4cm,inner=1.95cm,outer=1.65cm,bottom=2.54cm]{geometry}
 \usepackage{polyglossia}
 \usepackage{tikz}
 \usepackage[backend=biber,style=apa,url=true]{biblatex}
@@ -20,8 +18,6 @@
 \Xbeforesymlinenum{-0.5em}
 \newcommand{\comillas}[1]{«#1»}
 \Xnonbreakableafternumber
-\clearpairofpagestyles
-\ofoot[\pagemark]{\pagemark}
 \fnpos{critical-familiar}
 \fnpos{%
 	{A}{familiar},
@@ -32,7 +28,14 @@
 \setotherlanguage[variant=ancient]{greek}
 \usetikzlibrary{positioning}
 \setmainfont[Numbers=Lining,BoldFont={}]{old standard}
+%Tamaño vertical del aparato crítico.
+\Xprenotes{11pt}
+\prenotesX{11pt}
+\Xafterrule{1pt plus 2pt minus 0.5pt}
+\afterruleX{1pt plus 2pt minus 0.5pt}
+%
 
+%
 %Para que se cite correctamente el shortauthor.  
 \makeatletter
 \AtEveryCitekey{\ifnameundef{shortauthor}{}{\def\cbx@apa@ifnamesaved{\@firstoftwo}}}
@@ -58,8 +61,8 @@
 
 \pagenumbering{arabic}
 \setcounter{page}{1}
-\section*{{\fontsize{13}{14.35}\selectfont PREFACIO}}
-\addcontentsline{toc}{section}{Prefacio}
+\section*{{\fontsize{13}{14.35}\selectfont APUNTES}}
+\addcontentsline{toc}{section}{Apuntes}
 
 Jorge Manrique nació ca. 1440 y falleció en abril de 1479. Una noticia de su fallecimiento la transmite Fernando del Pulgar en su \textit{Crónica de los reyes Católicos}:
 
@@ -71,22 +74,22 @@ El título de la obra, \textit{Coplas por la muerte de su padre}, resulta un tan
 
 No se conservaron autógrafos de alguna copla ni testimonios que puedan considerarse apógrafos o idiógrafos. El testimonio más antiguo que contiene la colección de cuarenta coplas es el manuscrito del \textit{Cancionero de Egerton}, y no es sino hasta ca. 1482-83 —seis o siete años tras la redacción y cuatro o cinco tras el fallecimiento del autor— que aparece en un impreso en carácter de \textit{editio princeps}. Es necesario destacar que no existió un \comillas{obras de don Jorge Manrique} o una edición de sus textos, sino que solo se conservaron dispersos en cancioneros.
 
-\section*{\fontsize{13}{14.35}\selectfont TESTIMONIOS\footnote{ Se adoptan las siglas utilizadas por \textcite{PérezPriego2017} quien, a su vez, las adopta de Dutton a partir de \textit{El cancinonero del s. XV (ca. 1360-1520)} [7 vols.], texto que para la presente edición no pudo consultarse.}}
+\section*{\fontsize{13}{14.35}\selectfont TESTIMONIOS\footnote{ Se adoptan las siglas utilizadas por \textcite{PérezPriego2017} quien, a su vez, las adopta de Dutton a partir de \textit{El cancinonero del s. XV (ca. 1360-1520)} [7 vols.].}}
 \addcontentsline{toc}{section}{Testimonios}
 
 \textit{LB3}: \textit{Cancionero de Egerton}; British Library, Eg. 939.
 
-Manuscrito en papel con marcas de agua; de finales de 1470 e inicios de 1480; 19x14,5cm.; escritura gótica cortesana, copista castellano; copia de un genuino llevado a cabo en la corte de Navarra; contiene textos poéticos y epistolares; 3 cuardas [2 al inicio y 1 de cierre] y 122 fols.; los ff. 15r.-18v. contienen las coplas con la rúbrica \comillas{¶Coplas que fiço don jorje manrriq\textit{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\textit{ue} su padre}; la copla XL estuvo incompleta, pero otra redacción la completó en los pasajes restantes con una escritura gótica descuidada, escrita en los espacios restantes del f. 18v., porque el fol. central [primitivo f. 19v.] no se conservó, que debía contener las líneas faltantes de la copla, y tras el fol. no conservado, debía continuar el texto del \textit{Infante Epitus} \textcite{Beltrán2011}; \comillas{cancionero pro-Isabelino} \parencite{Severin2000}.\vspace{5pt}
+Manuscrito en papel con marcas de agua; de finales de 1470 e inicios de 1480; 19x14,5cm.; escritura gótica cortesana, copista castellano; copia de un genuino llevado a cabo en la corte de Navarra; contiene textos poéticos y epistolares; 3 cuardas [2 al inicio y 1 de cierre] y 122 fols.; los ff. 15r.-18v. contienen las coplas con la rúbrica \comillas{¶Coplas que fiço don jorje manrriq\textit{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\textit{ue} su padre}; la copla XL estuvo incompleta, pero otra redacción la completó en los pasajes restantes con una escritura gótica descuidada, escrita en los espacios restantes del f. 18v., porque el fol. central [primitivo f. 19v.] no se conservó: tras aquel debía continuar el texto del \textit{Infante Epitus} \textcite{Beltrán2011}; \comillas{cancionero pro-Isabelino} \parencite{Severin2000}.\vspace{5pt}
 
 \textit{82*JM}: \textit{Vita Christi por fray Íñigo de Mendoza}; RBME, 100-II-17.
 
-Impresión incunable; tipografía gótica a doble columna; ca. 1480-1484, Zaragosa?; 52 fols.; los ff. 41r.-44v. contienen las coplas con la rúbrica \comillas{Dezir de don jorge manrriq\textit{ue} por la muerte de su padre}; hay dos ejemplares conocidos, que se hallan uno, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [100-II-17], y el otro, en la Biblioteca Comunale de Palermo [Esp-XI, F. 56, núm.3]; \textit{editio princeps}.\vspace{5pt}
+Impresión incunable; tipografía gótica a doble columna; ca. 1480-1484, Zaragosa?; 52 fols.; los ff. 41r.-44v. contienen las coplas con la rúbrica \comillas{Dezir de don jorge manrriq\textit{ue} por la muerte de su padre}; hay dos ejemplares y se hallan: uno, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [100-II-17], y el otro, en la Biblioteca Comunale de Palermo [Esp-XI, F. 56, núm.3]; plausible \textit{editio princeps}.\vspace{5pt}
 
 \textit{86*RL}: \textit{Cancionero de Ramón de Llavia}; BNE, INC/2567.
 
 Impresión a doble columna; tipografía gótica; Zaragoza, Pablo Hurus, ca. 1488-1490?; 98 fols.; los ff. 73r.-76r. contienen las coplas con la rúbrica \comillas{De don jorge manrrique por la muerte de su padre}; dos ejemplares en la Biblioteca Nacional de España con las siglas INC/2567 y INC/2892; dedicado a doña Francisquina de Bardací, según el prólogo \comillas{fecho a la señora doña francisqujna de bardaçi mujer del magnifico señor mofsen(?) joan fernandez de heredia gouernador de arago\textit{n} por ramon dellabia en q\textit{ue} le endereça el presente libro}.\vspace{5pt}
 
-\textit{HH1}: \textit{Cancionero de Oñate-Castañeda}; Harvard, Houghton Library, MS. Span. 97.
+\textit{HH1}: \textit{Cancionero de Oñate-Castañeda}; Harvard, Houghton Library, Span. 97.
 
 Manuscrito en papel; 28x20,6cm.; escritura gótica del s. XV con rasgos de cortesana; papel y filigranas ca. 1480-1486; consta de un total de 437 fols.; los ff. 421v.-424v. contienen las coplas I-XXXIV con la rúbrica \comillas{Coplas de do\textit{n} jorge ma\textit{n}riq\textit{ue} a la muerte del maestre do\textit{n} rod\textit{rig}o ma\textit{n}riq\textit{ue} su padre}; carece del f. 425; para las cuestión de las variantes adiáforas \textit{conservados}/\textit{olvidados} resulta lacunoso. Edición paleográfica de \textcite{Severin1990}.\vspace{5pt} 
 
@@ -738,10 +741,10 @@ di, Muerte, ¿do los asco\textit{n}des
 que fiziero\textit{n} en las guerras
 
 y en las pazes,\\
-q\textit{ua}ndo tú, cruda\footnoteC{ \comillas{cruda}= \comillas{Se toma tambien por cruel, áspero, sangriento y desapiadado.} (\textit{Diccionario de Autoridades}, 3ª).}, te ensañas,\\
+q\textit{ua}ndo tú, cruda\footnoteC{ \comillas{cruda}: \comillas{Se toma tambien por cruel, áspero, sangriento y desapiadado.} (\textit{Diccionario de Autoridades}, 3ª).}, te ensañas,\\
 co\textit{n} tu fuerça las atierras
 
-y desfazes\footnoteC{ \comillas{guerras/pazes}, \comillas{atierras/desfazes}= es probable que \textit{82*JM} haya leído erróneamente, invirtiendo el orden entre los vv. 272-273 y 275-276, algo que puede conjeturarse por la lección \textit{passos}, quizá una lectura errónea de \textit{pazes} y \textit{guerras}, que aparece en 273, cuando en el resto de testimonios aparece en el 272, al igual que en lugar de \textit{atierras} lee \textit{desfazes} y al revés.}.
+y desfazes\footnoteC{ \comillas{guerras/pazes}, \comillas{atierras/desfazes}: es probable que \textit{82*JM} haya leído erróneamente, invirtiendo el orden entre los vv. 272-273 y 275-276, algo que puede conjeturarse por la lección \textit{passos}, quizá una lectura errónea de \textit{pazes} y \textit{guerras}, que aparece en 273, cuando en el resto de testimonios aparece en el 272, al igual que en lugar de \textit{atierras} lee \textit{desfazes} y al revés.}.
 \pend
 
 \begin{center}
@@ -810,7 +813,7 @@ Y a los bravos \edtext{y dañosos}{\Afootnote{y furiosos \textit{82*JM}; y sober
 \pend
 
 \begin{center}
-	[XXVII]\footnoteA{ XV en \textit{82*JM}. Rúbrica= \comillas{conpara} \textit{LB3}.}
+	[XXVII]\footnoteA{ XV en \textit{82*JM}. Rúbrica: \comillas{conpara} \textit{LB3}.}
 \end{center}
 \pstart
 En \edtext{}{\lemma{\hspace*{-1em}}\Afootnote[nosep]{en [la] \textit{eras. LB3}}} ventura, \edtext{Otavïano}{\lemma{otauiano}\Afootnote{octoniano \textit{82*JM}}},\\
@@ -831,7 +834,7 @@ que prometía.
 \pend
 
 \begin{center}
-	[XXVIII]\footnoteA{ XXVI en\textit{82*JM}. Rúbrica: \comillas{prosigue} \textit{LB3}.}
+	[XXVIII]\footnoteA{ XXVI en \textit{82*JM}. Rúbrica: \comillas{prosigue} \textit{LB3}.}
 \end{center}
 \pstart
 Antonio \edtext{Pío}{\lemma{pio}\Afootnote{pia \textit{82*JM}}} e\textit{n} cleme\textit{n}çia,\\
@@ -907,7 +910,7 @@ que co\textit{n} su braço \edtext{pintó}{\lemma{pinto}\Afootnote{gano \textit{
 en \edtext{la}{\Afootnote{\textit{om. 86*RL}, \textit{HH1}}} joventud,\\
 co\textit{n} otras nuevas bitorias,\\ agora las renovó
 
-en \edtext{la}{\Afootnote{\textit{om. 86*RL}, \textit{HH1}}} senetud\footnoteC{ 363 y 366= «en la joventud / en la senetud». Ambos pasajes, siguiendo a \textit{LB3} y \textit{82*JM}, son un pentasílabo agudo, esto es, un hexasílabo, incurriendo, evidentemente, en una hipermetría. En este caso, \textit{86*RL} y \textit{HH1} omiten \textit{la}, pero aun así incurren en una hipermetría por ser tetrasílabos agudos, por tanto, pentasílabos. \textcite{Beltrán1991} selecciona \textit{en la juventud}, lección de su testimonio de base, pero en \textcite{Beltrán2013} selecciona \textit{en juventud}, y no ofrece argumentos de su cambio, sino que lo descarta en el aparato crítico. Según Navarro, en los pasajes «irregulares» Manrique aplicó el pentasílabo quebrado «en condiciones de compensación o sinalefa respecto al octosílabo precedente», que fue «meramente potestativa» y que «no la aplicó de manera sistemática» \parencite[175]{Navarro1961}. Aun así, estos dos pasajes parecen ser irresolubles, incluso aplicando esta regla, que solo funciona si se seleccionan las variantes de \textit{86*RL} y \textit{HH1}, esto es, omitir \textit{la}. Resulta complejo cuando otros testimonios no corrigen la hipermetría con sus lecciones. Los lectores podrán elegir cuál variante consideran adecuada, en tanto no sea la de \textit{MN19}, que ya «excede el exceso» con su hexasílabo agudo.};\\
+en \edtext{la}{\Afootnote{\textit{om. 86*RL}, \textit{HH1}}} senetud\footnoteC{ 363 y 366: «en la joventud / en la senetud». Ambos pasajes, siguiendo a \textit{LB3} y \textit{82*JM}, son un pentasílabo agudo, esto es, un hexasílabo, incurriendo, evidentemente, en una hipermetría. En este caso, \textit{86*RL} y \textit{HH1} omiten \textit{la}, pero aun así incurren en una hipermetría por ser tetrasílabos agudos, por tanto, pentasílabos. \textcite{Beltrán1991} selecciona \textit{en la juventud}, lección de su testimonio de base, pero en \textcite{Beltrán2013} selecciona \textit{en juventud}, y no ofrece argumentos de su cambio, sino que lo descarta en el aparato crítico. Según Navarro, en los pasajes «irregulares» Manrique aplicó el pentasílabo quebrado «en condiciones de compensación o sinalefa respecto al octosílabo precedente», que fue «meramente potestativa» y que «no la aplicó de manera sistemática» \parencite[175]{Navarro1961}. Aun así, estos dos pasajes parecen ser irresolubles, incluso aplicando esta regla, que solo funciona si se seleccionan las variantes de \textit{86*RL} y \textit{HH1}, esto es, omitir \textit{la}. Resulta complejo cuando otros testimonios no corrigen la hipermetría con sus lecciones. Los lectores podrán elegir cuál variante consideran adecuada, en tanto no sea la de \textit{MN19}, que ya «excede el exceso» con su hexasílabo agudo.};\\
 \edtext{por}{\Afootnote{que por \textit{LB3}}} su grand abilidat,\\
 \edtext{por}{\Afootnote{y por \textit{LB3}}} méritos y ançianía 
 
@@ -931,7 +934,7 @@ y por fuerça de sus manos
 
 las \edtext{cobró}{\lemma{cobro}\Afootnote{gano \textit{HH1}}}.\\
 Pues nuestro rey natural,\\
-si de las obras que obró\footnoteC{ 379-380 \textit{transp. LB3}= \comillas{si de las obras que obro / el nuestro rey natural}.}
+si de las obras que obró\footnoteC{ 379-380 \textit{transp. LB3}: \comillas{si de las obras que obro / el nuestro rey natural}.}
 
 fue servido,\\
 dígalo el de Portugal,\\
@@ -1101,7 +1104,7 @@ me perdona.»
 Así, co\textit{n} tal ente\textit{n}der\\
 todos sentidos humanos
 
-\edtext{conservados}{\lemma{conseruados}\Afootnote{oluidados \textit{83*IM}}}\footnoteC{ «oluidados» pertenece a \textit{83*IM}, testimonio representante del subarquetipo \textit{β}. La elección entre las adiáforas es en extremo compleja porque, siguiendo el \textit{stemma codicum} de \textcite{PérezPriego2017} —y el de Beltrán, en parte—, cada una tiene igual peso en los subarquetipos \textit{α} y \textit{β} por remitir al arquetipo \textit{X}. Cada lección tuvo defensores o «electores»; para la lección \textit{conservados}, \textcite{PérezPriego1990,PérezPriego2017}, \textcite{Conde2009} y \textcite{Gonzalez2019}, y para \textit{olvidados}, su innovador y elector \textcite{Beltrán1991,Beltrán2013,Beltrán2016}. Beltrán escuetamente argumenta en favor de la lección \textit{olvidados} en su edición crítica con el siguiente argumento: «\textit{oluidados} y \textit{conseruados} se reparten en las ramas del \textit{stemma} [...] Prefiero la primera opción, pues \textit{sentido} tiene la acepción "apetito, o parte inferior del hombre" (\textit{Aut.}) reforzado probablemente por el calificativo \textit{humanos}, lo que hace de esta variante un caso evidente de \textit{lectio difficilior}.» \parencite[158]{Beltrán1991}. Tras el comentario de \textcite{Conde2009}, en su edición de 2013, Beltrán le otorga mayor autoridad al \textit{Diccionario de Autoridades} —como diccionario antiguo—, porque refleja «valores arcaicos» y conserva «interpretaciones específicas de las ciencias o el pensamiento antiguo», y porque no es una cuestión puramente léxica, sino de valoración moral —en el vocablo—; y en su extenso estudio del 2016 añade, además, ejemplos textuales de época para justificar la acepción «apetitos». [La lección \textit{conservados} forma parte de la tradición \textit{vulgata} del texto]. Conde sostiene, contra Beltrán, que del mismo modo que el editor utiliza la segunda acepción para \textit{sentidos} [apetito], podría utilizar la principal, \textit{potencia}/\textit{facultad} para percibir «las impresiones de los objetos exteriores», y la tercera, \textit{entendimiento}/\textit{razón}, por tanto, no resultaría plausible utilizar la evidencia lexicográfica para adoptar \textit{olvidados} como lección para la \textit{constitutio textus}; y proporciona, además, diferentes testimonios para justificar \textit{conservados} y, de paso, la preeminencia de la 1ª y 3ª acepción del \textit{Diccionario de Autoridades} para \textit{sentidos}, esto es, \textit{entendimiento}/\textit{razón}; \textcite{PérezPriego2017} sigue a Conde. \textcite{Gonzalez2019} propone que la lección \textit{olvidados} resulta de una trivialización; luego, en su análisis, indica que los \textit{sentidos} no son cinco, sino diez, según la tradición medieval: cinco internos y cinco externos; los externos, los propios de la carne; los internos, siguiendo a Tomás de Aquino [\textit{S. Theol.}, I, q. 78, a. 4] —aquel, a su vez, siguiendo a Avicena y su «\textit{De anima}»—, son la «\textit{sensus communis}, \textit{imaginatio}, \textit{phantasia}, \textit{aestimativa} y \textit{memorativa}». Luego, cita a dos textos de autoridades que, con certeza, leyó Manrique: La \comillas{Partida Segunda} de Alfonso X el Sabio [\textit{Siete Partidas}, II, XIII] y la \textit{Coronación del Marqués de Santillana} de Juan de Mena [pp. 90-92 en la edición Kerkhof]. Siguiendo esas influencias —y otras que citó—, resulta en una unidad \textit{sentidos}-\textit{entendimiento} y olvidar los \textit{sentidos}, como indica la lección \textit{olvidados}; al tratarse de una unidad —siguiendo la evidencia proporcionada acerca de las \textit{ars moriendi} y la tradición—, la lección, como se estudia en crítica textual, no puede ir contra el propio autor.\\ \noindent\hspace*{0.5cm} Puede concluirse que Rodrigo Manrique fallece conservando facultades físicas y psicológicas [\textit{sentidos} y  \textit{entendimiento}], y que fallece en una «recta ley», ejerciendo los deberes propios que le corresponden como \textit{bellator}, esto es «guerreando» \parencite[52-55]{Gonzalez2019}. La evidencia histórica y la reconstrucción del \textit{contextus} se inclinan hacia \textit{conservados}.}\\
+\edtext{conservados}{\lemma{conseruados}\Afootnote{oluidados \textit{83*IM}}}\footnoteC{ «oluidados» pertenece a \textit{83*IM}, testimonio representante del subarquetipo \textit{β}. La elección entre las adiáforas es en extremo compleja porque, siguiendo el \textit{stemma codicum} de \textcite{PérezPriego2017} —y el de Beltrán, en parte—, cada una tiene igual peso en los subarquetipos \textit{α} y \textit{β} por remitir al arquetipo \textit{X}. Cada lección tuvo defensores o «electores»; para la lección \textit{conservados}, \textcite{PérezPriego1990,PérezPriego2017}, \textcite{Conde2009} y \textcite{Gonzalez2019}, y para \textit{olvidados}, su innovador y elector \textcite{Beltrán1991,Beltrán2013,Beltrán2016}. Beltrán escuetamente argumenta en favor de la lección \textit{olvidados} en su edición crítica con el siguiente argumento: «\textit{oluidados} y \textit{conseruados} se reparten en las ramas del \textit{stemma} [...] Prefiero la primera opción, pues \textit{sentido} tiene la acepción "apetito, o parte inferior del hombre" (\textit{Aut.}) reforzado probablemente por el calificativo \textit{humanos}, lo que hace de esta variante un caso evidente de \textit{lectio difficilior}.» \parencite[158]{Beltrán1991}. Tras el comentario de \textcite{Conde2009}, en su edición de 2013, Beltrán le otorga mayor autoridad al \textit{Diccionario de Autoridades} —como diccionario antiguo—, porque refleja «valores arcaicos» y conserva «interpretaciones específicas de las ciencias o el pensamiento antiguo», y porque no es una cuestión puramente léxica, sino de valoración moral —en el vocablo—; y en su extenso estudio del 2016 añade, además, ejemplos textuales de época para justificar la acepción «apetitos». [La lección \textit{conservados} forma parte de la tradición \textit{vulgata} del texto]. \textcite{Conde2009} sostiene, contra Beltrán, que del mismo modo que el editor utiliza la segunda acepción para \textit{sentidos} [apetito], podría utilizar la principal, \textit{potencia}/\textit{facultad} para percibir «las impresiones de los objetos exteriores», y la tercera, \textit{entendimiento}/\textit{razón}, por tanto, no resultaría plausible utilizar la evidencia lexicográfica para adoptar \textit{olvidados} como lección para la \textit{constitutio textus}; y proporciona, además, diferentes testimonios para justificar \textit{conservados} y, de paso, la preeminencia de la 1ª y 3ª acepción del \textit{Diccionario de Autoridades} para \textit{sentidos}, esto es, \textit{entendimiento}/\textit{razón}. \textcite{PérezPriego2017} sigue a Conde. \textcite{Gonzalez2019} propone que la lección \textit{olvidados} resulta de una trivialización; luego, en su análisis, indica que los \textit{sentidos} no son cinco, sino diez, según la tradición medieval: cinco internos y cinco externos; los externos, los propios de la carne; los internos, siguiendo a Tomás de Aquino [\textit{S. Theol.}, I, q. 78, a. 4] —aquel, a su vez, siguiendo a Avicena y su \textit{De anima}—, son la \textit{sensus communis}, \textit{imaginatio}, \textit{phantasia}, \textit{aestimativa} y \textit{memorativa}. Luego, cita dos textos de autoridades que, con certeza, leyó Manrique: La \comillas{Partida Segunda} de Alfonso X el Sabio [\textit{Siete Partidas}, II, XIII] y la \textit{Coronación del Marqués de Santillana} de Juan de Mena [pp. 90-92 en la edición de Kerkhof]. Siguiendo esas influencias, resulta en una unidad entre \textit{sentidos} y \textit{entendimiento}, y olvidar los \textit{sentidos}, como indica la lección \textit{olvidados}, implicaría en quebrar tal unidad al \comillas{deshacerse} de ambas; y al tratarse de una unidad —siguiendo la evidencia proporcionada acerca de las \textit{ars moriendi} y la tradición—, la lección, como se estudia en crítica textual, no puede ir contra el propio autor.\\ \noindent\hspace*{0.5cm} Puede concluirse que Rodrigo Manrique fallece conservando facultades físicas y psicológicas [\textit{sentidos} y  \textit{entendimiento}], y que fallece en una «recta ley», ejerciendo los deberes propios que le corresponden como \textit{bellator}, esto es, «guerreando» \parencite[52-55]{Gonzalez2019}. La evidencia histórica y la reconstrucción del \textit{contextus} se inclinan hacia la lección \textit{conservados}.}\\
 çercado de su muger\\
 \edtext{y de sus fijos y hermanos}{\Afootnote{de sus hijos y ermanos \textit{LB3}; y de fijos y de ermanos \textit{82*JM}, \textit{83*IM}}}\footnoteC{ 473-480 \textit{sec. m. LB3}.}                                                                        
 
@@ -1164,6 +1167,6 @@ Coplas apócrifas en la \textit{Glosa Famossisima} de Alonso de Cervantes, ubica
 
 \vspace{11pt}Tras la copla XL, en \textit{83*IM} yace un epitafio con la rúbrica \comillas{En su sepultura dize desta manera}:\vspace{5pt}
 
-	Aquí yaze muerto el ombre\\ que vivo queda su nombre.\footnoteA{ Beltrán, citando a Luis de Salazar y Castro, recupera «AQVI YACE MVERTO VN HOMBRE, QVE VIVO DEJO SV NOMBRE» \parencite[158]{Beltrán1991}.}
+	Aquí yaze muerto el ombre\\ que vivo queda su nombre.\footnote{ Beltrán, citando a Luis de Salazar y Castro, recupera «AQVI YACE MVERTO VN HOMBRE, QVE VIVO DEJO SV NOMBRE» \parencite[158]{Beltrán1991}.}
 %Espacio para que el comando que ejecuta el sistema no se quiebre. 
 \end{document}
