--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -10,7 +10,7 @@
 \usepackage{graphicx}
 \title{CARMINA OB MORTEM PATRIS}
 \author{GIORGII MANRICI}
-\date{\fontsize{9}{11}\selectfont{CVM APPARATV CRITICO INSTRVXIT}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
+\date{\fontsize{9}{11}\selectfont{EDITIO CRITICA}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %Aquí cierran los comandos para el documento.
 \Xarrangement{paragraph}
 \Xnumberonlyfirstinline
