--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -6,6 +6,7 @@
 \usepackage{polyglossia}
 \usepackage{tikz}
 \usepackage[backend=biber,style=apa,url=true]{biblatex}
+\setlength{\bibhang}{0.5cm}
 \addbibresource{bibliography.bib}
 \usepackage{graphicx}
 \title{CARMINA OB MORTEM PATRIS}
@@ -34,7 +35,8 @@
 \Xafterrule{1pt plus 2pt minus 0.5pt}
 \afterruleX{1pt plus 2pt minus 0.5pt}
 %
-
+\usepackage{tocloft}
+\renewcommand{\cftsecleader}{\cftdotfill{\cftdotsep}}
 %
 %Para que se cite correctamente el shortauthor.  
 \makeatletter
@@ -61,7 +63,7 @@
 
 \pagenumbering{arabic}
 \setcounter{page}{1}
-\section*{{\fontsize{13}{14.35}\selectfont APUNTES}}
+\section*{{\fontsize{13}{14.35}\selectfont APVNTES}}
 \addcontentsline{toc}{section}{Apuntes}
 
 Jorge Manrique nació ca. 1440 y falleció en abril de 1479. Una noticia de su fallecimiento la transmite Fernando del Pulgar en su \textit{Crónica de los reyes Católicos}:
@@ -193,7 +195,7 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 \addcontentsline{toc}{section}{Texto y aparato críticos}
 \newpage
 
-\section*{{\fontsize{13}{14.35}\selectfont CONSPECTUS SIGLORUM}}
+\section*{{\fontsize{13}{14.35}\selectfont CONSPECTVS SIGLORVM}}
 \addcontentsline{toc}{section}{Conspectus siglorum}
 
 \subsection*{{\fontsize{11}{11.96}\selectfont TESTIMONIA}}
@@ -211,7 +213,7 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 
 \textit{83*IM}: \textit{Cancionero de fray Íñigo de Mendoza}, 1483?
 
-\subsection*{{\fontsize{11}{11.96}\selectfont APPARATUS CRITICUS}}
+\subsection*{{\fontsize{11}{11.96}\selectfont APPARATVS CRITICVS}}
 \addcontentsline{toc}{subsection}{Apparatus criticus}
 
 \textit{a. corr.}: ante correctionem [antes de la corrección].
@@ -1167,6 +1169,6 @@ Coplas apócrifas en la \textit{Glosa Famossisima} de Alonso de Cervantes, ubica
 
 \vspace{11pt}Tras la copla XL, en \textit{83*IM} yace un epitafio con la rúbrica \comillas{En su sepultura dize desta manera}:\vspace{5pt}
 
-	Aquí yaze muerto el ombre\\ que vivo queda su nombre.\footnote{ Beltrán, citando a Luis de Salazar y Castro, recupera «AQVI YACE MVERTO VN HOMBRE, QVE VIVO DEJO SV NOMBRE» \parencite[158]{Beltrán1991}.}
+	Aquí yaze muerto el ombre\\ que vivo queda su nombre.\footnoteC{ Beltrán, citando a Luis de Salazar y Castro, recupera «AQVI YACE MVERTO VN HOMBRE, QVE VIVO DEJO SV NOMBRE» \parencite[158]{Beltrán1991}.}
 %Espacio para que el comando que ejecuta el sistema no se quiebre. 
 \end{document}
