--- a/bibliography.bib
+++ b/bibliography.bib
@@ -241,7 +241,7 @@
 }
 
 @book{Severin1990,
-	author    = {D. S. Severin},
+	author    = {Dorothy Sherman Severin},
 	title     = {El Cancionero de O{\~{n}}ate-Casta{\~{n}}eda},
 	year      = {1990},
 	publisher = {The Hispanic Seminary of Medieval Studies},
@@ -249,7 +249,7 @@
 }
 
 @book{Severin2000,
-	author    = {D. S. Severin},
+	author    = {Dorothy Sherman Severin},
 	title     = {Two Spanish Songbooks: The Cancionero Capitular de la Colombina (SV2) and the Cancionero de Egerton (LB3)},
 	year      = {2000},
 	publisher = {Liverpool University Press}
