--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -262,7 +262,7 @@ tan callando;\\
 q\textit{uá}nd presto se va el plazer,\\
 cómo después de acordado
 
-da dolor;\\
+da dolor,\\
 cómo a nuestro paresçer\\
 \edtext{q\textit{ua}lq\textit{uie}ra}{\Afootnote{qualqujer \textit{LB3}}} tie\textit{n}po pasado \edtext{}{\lemma{\hspace*{-1em}}\Afootnote[nosep]{sapado \textit{err. LB3}}}
 
