--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -6,7 +6,7 @@
 \usepackage{polyglossia}
 \usepackage{tikz}
 \usepackage[backend=biber,style=apa,url=true]{biblatex}
-\setlength{\bibhang}{0.5cm}
+\setlength{\parindent}{1.27cm}
 \addbibresource{bibliography.bib}
 \usepackage{graphicx}
 \title{CARMINA OB MORTEM PATRIS}
@@ -79,6 +79,7 @@ No se conservaron autógrafos de alguna copla ni testimonios que puedan consider
 \section*{\fontsize{13}{14.35}\selectfont TESTIMONIOS\footnote{ Se adoptan las siglas utilizadas por \textcite{PérezPriego2017} quien, a su vez, las adopta de Dutton a partir de \textit{El cancinonero del s. XV (ca. 1360-1520)} [7 vols.].}}
 \addcontentsline{toc}{section}{Testimonios}
 
+{\setlength{\parindent}{0.5cm}
 \textit{LB3}: \textit{Cancionero de Egerton}; British Library, Eg. 939.
 
 Manuscrito en papel con marcas de agua; de finales de 1470 e inicios de 1480; 19x14,5cm.; escritura gótica cortesana, copista castellano; copia de un genuino llevado a cabo en la corte de Navarra; contiene textos poéticos y epistolares; 3 cuardas [2 al inicio y 1 de cierre] y 122 fols.; los ff. 15r.-18v. contienen las coplas con la rúbrica \comillas{¶Coplas que fiço don jorje manrriq\textit{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\textit{ue} su padre}; la copla XL estuvo incompleta, pero otra redacción la completó en los pasajes restantes con una escritura gótica descuidada, escrita en los espacios restantes del f. 18v., porque el fol. central [primitivo f. 19v.] no se conservó: tras aquel debía continuar el texto del \textit{Infante Epitus} \textcite{Beltrán2011}; \comillas{cancionero pro-Isabelino} \parencite{Severin2000}.\vspace{5pt}
@@ -102,6 +103,7 @@ Manuscrito en papel; 21x15cm.; copia del s. XVIII de un manuscrito de finales de
 \textit{83*IM}: \textit{Cancionero de fray Íñigo de Mendoza}; BNE, INC/897.
 
 Impresión incunable a doble columna; tipografía gótica; Zamora, 1483?; 90 fols.; los ff. 67r.-70r. contienen las coplas con la rúbrica \comillas{Coplas que hizo do\textit{n} jorge manrriq\textit{ue} ala muerte del maestre de santiago do\textit{n} rodrigo manrique su padre}; existen dos ejemplares y se hallan uno, en la Biblioteca Nacional de España [INC/897], y otro, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [38-I-22].
+}
 
 \section*{{\fontsize{13}{14.35}\selectfont CRITERIOS DE EDICIÓN}}
 \addcontentsline{toc}{section}{Criterios de edición}
@@ -245,6 +247,8 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 \textit{γ}: \textit{δ} + \textit{ε}. 
 \newpage
 %Aquí inician las COPLAS POR LA MVERTE DE SV PADRE.
+{\setlength{\parindent}{0.5cm}
+	
 {\begin{center}
 		[I]\footnoteA{ Rúbrica: \comillas{Coplas que fiço don jorge ma\textit{n}rriq\textit{ue} por la muerte de su padre} \textit{LB3}; \comillas{Dezir de don jorge manrriq\textit{ue} por la muerte de su padre} \textit{82*JM}; \comillas{De don jorge manrique por la muerte de su padre} \textit{86*RL}; \comillas{Coplas de do\textit{n} jorge ma\textit{n}riq\textit{ue} a la muerte del maestre don rrod\textit{rig}o ma\textit{n}riq\textit{ue} su padre} \textit{HH1}; \comillas{Coplas que hizo do\textit{n} jorge manrriq\textit{ue} ala muerte del maestre de santiago do\textit{n} rodrigo manrique su padre} \textit{83*IM}.}
 \end{center}
@@ -1121,29 +1125,36 @@ y en su gloria;\\
 su memoria.
 \pend
 \endnumbering
+}
 \newpage
 
 \section*{\fontsize{13}{14.35}\selectfont APÉNDICE}
 \addcontentsline{toc}{section}{Apéndice}
 
+\setlength{\parindent}{1.27cm}
 Coplas apócrifas en la \textit{Glosa Famossisima} de Alonso de Cervantes, ubicadas entre las coplas XXIV y XXV. Texto fijado por \textcite{Foulché-Delbosc1902}:\vspace{5pt}
 
+{\setlength{\parindent}{0.5cm}
 \begin{pairs}
 	\begin{Leftside}
 		\beginnumbering
 		\pstart
 		Es tu comienço lloroso,\\
-		tu salida syempre amarga\\
-		\noindent\hspace*{0.5cm}y nunca buena,\\
+		tu salida syempre amarga
+		
+		y nunca buena,\\
 		lo de en medio trabajoso,\\
-		a quien das vida mas larga\\
-		\noindent\hspace*{0.5cm}le das pena;\\
+		a quien das vida mas larga
+		
+		le das pena;\\
 		anse los bienes muriendo,\\
-		y con sudor se procuran\\
-		\noindent\hspace*{0.5cm}y los das,\\
+		y con sudor se procuran
+		
+		y los das,\\
 		y los males vienen corriendo,\\
-		y después de venidos\\
-		\noindent\hspace*{0.5cm}duran mas.
+		y después de venidos
+		
+		duran mas.
 		\pend
 		\endnumbering
 	\end{Leftside}
@@ -1151,24 +1162,32 @@ Coplas apócrifas en la \textit{Glosa Famossisima} de Alonso de Cervantes, ubica
 		\beginnumbering
 		\pstart
 		O mundo, pues que nos matas,\\
-		fuera la vida que diste\\
-		\noindent\hspace*{0.5cm}toda vida,\\
+		fuera la vida que diste
+		
+		toda vida,\\
 		mas segun aca nos tratas,\\
-		lo mejor y menos triste\\
-		\noindent\hspace*{0.5cm}es la partida\\
-		de tu vida tan cubierta\\ de males, y de dolores\\
-		\noindent\hspace*{0.5cm}tan poblada,\\
+		lo mejor y menos triste
+		
+		es la partida\\
+		de tu vida tan cubierta\\
+		de males, y de dolores
+		
+		tan poblada,\\
 		de los bienes tan desierta,\\
-		de plazeres y dulçores\\
-		\noindent\hspace*{0.5cm}despoblada.
+		de plazeres y dulçores
+		
+		despoblada.
 		\pend
 		\endnumbering
 	\end{Rightside}
 \end{pairs}
 	\Columns
+}
 
 \vspace{11pt}Tras la copla XL, en \textit{83*IM} yace un epitafio con la rúbrica \comillas{En su sepultura dize desta manera}:\vspace{5pt}
 
-	Aquí yaze muerto el ombre\\ que vivo queda su nombre.\footnoteC{ Beltrán, citando a Luis de Salazar y Castro, recupera «AQVI YACE MVERTO VN HOMBRE, QVE VIVO DEJO SV NOMBRE» \parencite[158]{Beltrán1991}.}
+\begin{center}
+		Aquí yaze muerto el ombre\\ que vivo queda su nombre.\footnoteC{ Beltrán, citando a Luis de Salazar y Castro, recupera «AQVI YACE MVERTO VN HOMBRE, QVE VIVO DEJO SV NOMBRE» \parencite[158]{Beltrán1991}.}
+\end{center}}
 %Espacio para que el comando que ejecuta el sistema no se quiebre. 
 \end{document}
