--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -11,8 +11,8 @@
 \addbibresource{bibliography.bib}
 \usepackage{graphicx}
 \title{CARMINA OB MORTEM PATRIS}
-\author{GIORGII MANRICI}
-\date{\fontsize{9}{11}\selectfont{EDITIO CRITICA}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
+\author{\fontsize{14}{11.96}\selectfont GIORGII MANRICI}
+\date{\vspace{60pt}\fontsize{9}{11}\selectfont{EDITIO CRITICA INSTRVXIT}\\\vspace{15pt}\fontsize{12}{9}\selectfont J. BERACHAMONS LETESMVS\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %Aquí cierran los comandos para el documento.
 \Xarrangement{paragraph}
 \Xnumberonlyfirstinline
