--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -12,7 +12,7 @@
 \usepackage{graphicx}
 \title{CARMINA OB MORTEM PATRIS}
 \author{\fontsize{14}{11.96}\selectfont GIORGII MANRICI}
-\date{\vspace{60pt}\fontsize{9}{11}\selectfont{EDITIO CRITICA INSTRVXIT}\\\vspace{15pt}\fontsize{12}{9}\selectfont J. BERACHAMONS LETESMVS\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
+\date{\vspace{60pt}\fontsize{9}{11}\selectfont{EDITIO CRITICA INSTRVXIT}\\\vspace{15pt}\fontsize{12}{9}\selectfont I. BERACHAMONS LETESMVS\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %Aquí cierran los comandos para el documento.
 \Xarrangement{paragraph}
 \Xnumberonlyfirstinline
