--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -1,5 +1,5 @@
 \documentclass[11pt,a4paper,twoside]{article}
-\usepackage{reledmac}
+\usepackage[noeledsec,noend,noledgroup,series={A,C}]{reledmac}
 \usepackage{reledpar}
 \usepackage{fontspec}
 \usepackage[paperwidth=17.5cm,paperheight=25.5cm,top=1.4cm,inner=1.95cm,outer=1.65cm,bottom=2.54cm]{geometry}
