--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -15,12 +15,13 @@
 \date{\vspace{60pt}\fontsize{11}{11}\selectfont{EDICIÓN CRÍTICA LIMINAR}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %Aquí cierran los comandos para el documento.
 \Xarrangement{paragraph}
+\Xnonbreakableafternumber
 \Xnumberonlyfirstinline
 \Xnumberonlyfirstintwolines
+\parindentX
 \Xsymlinenum{||}
 \Xbeforesymlinenum{-0.5em}
 \newcommand{\comillas}[1]{«#1»}
-\Xnonbreakableafternumber
 \renewcommand{\thefootnoteA}{}
 \fnpos{critical-familiar}
 \fnpos{%
@@ -121,7 +122,7 @@ Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcit
 		\node (b) at (2.5,-1.5) {β};
 		
 		% Nivel 2
-		\node (lb3) at (-3.5,-2.3) {LB3};
+		\node (lb3) at (-3.6,-2.3) {LB3};
 		\node (g) at (-1.5,-2.3) {γ};
 		\node (im) at (3,-3.4) {83*IM};
 		
@@ -221,7 +222,7 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 
 \textit{a. corr.} = ante correctionem [antes de la corrección].
 
-\textit{c.} = commentario.
+\textit{gl.} = glossa.
 
 \textit{corr.} = correxit [corrigió].
 
@@ -310,7 +311,7 @@ Allí los ríos cabdales,\\
 allís los otros, medianos,
 
 y más chicos,\\
-\edtext{y llegados}{\Afootnote{alleguados \textit{82*JM}; allegados \textit{83*IM}}}\footnoteC{ \textcite{PérezPriego2017} sugiere que la lección \textit{alleguados}, a través de la contaminación de \textit{82*JM} hacia el subarquetipo \textit{β}, habría generado la lección \textit{allegados}, que Beltrán utilizó para sus ediciones críticas.}, son iguales,\\
+\edtext{y llegados}{\Afootnote{alleguados \textit{82*JM}; allegados \textit{83*IM}}}\footnoteC{\textcite{PérezPriego2017} sugiere que la lección \textit{alleguados}, probablemente a través de la contaminación de \textit{82*JM} al subarquetipo \textit{β}, habría generado la lección \textit{allegados}.}, son iguales,\\
 los que bive\textit{n} por sus manos
 
 y los ricos.
@@ -331,7 +332,7 @@ sus sabores.\\
 Aquel solo me encomie\textit{n}do,\\
 aq\textit{ue}l solo invoco yo \edtext{}{\lemma{\hspace*{-1em}}\Afootnote[nosep]{de verdat \textit{a. corr. LB3}}}
 
-de verdad\footnoteC{En \textit{LB3} se redactó \comillas{[de ver] dat} luego de \comillas{ynuoco yo}. Quizá el redactor inicial —o un secundario [\textit{cfr. c.} XL]— tachó el fragmento por la errónea ubicación y corrigió \comillas{de verdad} en un pequeño espacio entre los vv. 44 y 46. Y ya que se modificó \comillas{\textit{verdat}} por \comillas{\textit{verdad}} en la corrección, se reemplaza \textit{t} en \comillas{deydat} por \textit{d} para conservar la rima.} \edtext{}{\lemma{\hspace*{-1em}}\Afootnote[nosep]{\textit{p. corr. LB3}}},\\
+de verdad\footnoteC{En \textit{LB3} se redactó \comillas{[de ver] dat} luego de \comillas{ynuoco yo}. Quizá el redactor inicial —o un secundario [\textit{cfr. gl.} XL]— tachó el fragmento por la errónea ubicación y corrigió \comillas{de verdad} en un pequeño espacio entre los vv. 44 y 46. Puesto que se modificó \textit{verdat} por \textit{verdad} en la corrección, para la fijación se reemplazó \textit{t} en \textit{deydat} por \textit{d} para conservar la rima.} \edtext{}{\lemma{\hspace*{-1em}}\Afootnote[nosep]{\textit{p. corr. LB3}}},\\
 que en este mu\textit{n}do \edtext{bivie\textit{n}do}{\lemma{biuie\textit{n}do}\Afootnote{vinjendo \textit{HH1}}},\\
 el mu\textit{n}do no conosçió
 
@@ -429,7 +430,7 @@ desfallesçen.
 	[IX]\footnoteA{[IX] VIII en \textit{82*JM}, \textit{86*RL}.}
 \end{center}
 \pstart
-\edtext{Dezidme}{\lemma{dezidme}\Afootnote{Dezimos \textit{83*IM}}} la fermosura\\
+\edtext{Dezidme}{\lemma{dezidme}\Afootnote{Dezimos \textit{83*IM}}}, la fermosura,\\
 la gentil frescura y tez
 
 de la cara,\\
@@ -589,7 +590,7 @@ Los infantes de Aragó\textit{n},
 ¿Qué fue de tanta inve\textit{n}çión
 
 como \edtext{traxiero\textit{n}}{\Afootnote{truxieron \textit{δ}, \textit{MN19}}}?\\
-Las justas y los torneos,\edtext{}{\linenum{|||||189}\linenum{||190|||192}\lemma{\hspace*{-1em}}\Afootnote[nosep]{\textit{transp. 86*RL}}}\\
+Las justas y los torneos,\edtext{}{\linenum{|||||189}\lemma{\hspace*{-1em}}\Afootnote[nosep]{\hspace*{-0.5em}/190–192 ~\textit{transp. 86*RL}}}\\
 parame\textit{n}tos, bordaduras
 
 y çimeras\\
