--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -33,7 +33,7 @@
 \setdefaultlanguage{spanish}
 \setotherlanguage[variant=ancient]{greek}
 \usetikzlibrary{positioning}
-\setmainfont{Common serif}[Numbers=Lining,BoldFont={},RawFeature={-calt}]
+\setmainfont{CommonSerif-Regular.otf}[Numbers=Lining,BoldFont={},RawFeature={-calt},ItalicFont={CommonSerif-Italic.otf}]
 %Tamaño vertical del aparato crítico.
 \Xprenotes{11pt}
 \prenotesX{11pt}
@@ -660,7 +660,7 @@ di, Muerte, ¿do los asco\textit{n}des\\
 \edtext{Y las sus}{\lemma{y las sus}\Afootnote{y sus muy \textit{83*IM}}} claras hazañas\\
 que fiziero\textit{n} en las guerras\\
 y en las pazes,\\
-q\textit{ua}ndo tú, cruda\footnoteC{\comillas{cruda} = \comillas{Se toma tambien por cruel, áspero, sangriento y desapiadado.} (\textit{Diccionario de Autoridades}).}, te ensañas,\\
+q\textit{ua}ndo tú, cruda\footnoteC{\comillas{cruda} = \comillas{Se toma tambien por cruel, áspero, sangriento y desapiadado.} (\textit{Autoridades}, 3ª acepción).}, te ensañas,\\
 co\textit{n} tu fuerça las atierras\\
 y desfazes\footnoteC{\comillas{guerras/pazes}, \comillas{atierras/desfazes} = es probable que \textit{82*JM} haya leído erróneamente, invirtiendo el orden entre los vv. 272-273 y 275-276, algo que puede conjeturarse por la lección \textit{passos}, quizá una lectura errónea de \textit{pazes} y \textit{guerras}, que aparece en 273, cuando en el resto de testimonios aparece en el 272, al igual que en lugar de \textit{atierras} lee \textit{desfazes} y al revés.}.
 \pend
