--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -33,7 +33,7 @@
 \setdefaultlanguage{spanish}
 \setotherlanguage[variant=ancient]{greek}
 \usetikzlibrary{positioning}
-\setmainfont{CommonSerif-Regular.otf}[Numbers=Lining,BoldFont={},RawFeature={-calt},ItalicFont={CommonSerif-Italic.otf}]
+\setmainfont{Common serif}[Numbers=Lining,BoldFont={},RawFeature={-calt}]
 %Tamaño vertical del aparato crítico.
 \Xprenotes{11pt}
 \prenotesX{11pt}
